--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,7 +1,6 @@
 {% set name = "chemprop" %}
 {% set version = "1.6.1" %}
 
-
 package:
   name: {{ name|lower }}
   version: {{ version }}
@@ -11,7 +10,6 @@ source:
   sha256: 298b548c6340a8efed29561c177811da24413153d84ef1a6e4bf91e87862438c
 
 build:
-  number: 0
   noarch: python
   entry_points:
     - chemprop_train=chemprop.train:chemprop_train
@@ -22,35 +20,34 @@ build:
     - chemprop_web=chemprop.web.run:chemprop_web
     - sklearn_train=chemprop.sklearn_train:sklearn_train
     - sklearn_predict=chemprop.sklearn_predict:sklearn_predict
-  script: {{ PYTHON }} -m pip install . -vv
+  script: {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
+  number: 1
 
 requirements:
   host:
+    - python >=3.8
     - pip
-    - python >=3.6
   run:
+    - python >=3.8
     - flask >=1.1.2
     - hyperopt >=0.2.3
     - matplotlib-base >=3.1.3
     - numpy >=1.18.1
     - pandas >=1.0.3
     - pandas-flavor >=0.2.0
-    - python >=3.6
     - scikit-learn >=0.22.2.post1
-    - scipy >=1.4.1
     - sphinx >=3.1.2
     - tensorboardx >=2.0
-    - pytorch >=1.5.1
+    - pytorch >=1.4.0
     - tqdm >=4.45.0
     - typed-argument-parser >=1.6.1
-    - rdkit
-    - descriptastorus
+    - rdkit >=2020.03.1.0
 
 test:
   imports:
     - chemprop
-    - chemprop.data
   commands:
+    - pip check
     - chemprop_train --help
     - chemprop_predict --help
     - chemprop_fingerprint --help
@@ -59,20 +56,15 @@ test:
     - chemprop_web --help
     - sklearn_train --help
     - sklearn_predict --help
+  requires:
+    - pip
 
 about:
-  home: http://chemprop.csail.mit.edu/
-  license: MIT
-  license_family: MIT
-  license_file: LICENSE.txt
-  summary: Message Passing Neural Networks for Molecule Property Prediction
-  description: |
-    This repository contains message passing neural networks for molecular
-    property prediction as described in the paper Analyzing Learned 
-    Molecular Representations for Property Prediction and as used in the 
-    paper A Deep Learning Approach to Antibiotic Discovery.
-  doc_url: https://chemprop.readthedocs.io/en/latest/
+  home: https://github.com/chemprop/chemprop
+  summary: Molecular Property Prediction with Message Passing Neural Networks
   dev_url: https://github.com/chemprop/chemprop
+  license: MIT
+  license_file: LICENSE.txt
 
 extra:
   recipe-maintainers:
