--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -25,12 +25,12 @@ build:
 
 requirements:
   host:
-    - python >=3.8
+    - python <3.9,>=3.7
     - pip
   run:
     - sphinx_rtd_theme >=2.0.0
     - werkzeug <3
-    - python >=3.8
+    - python <3.9,>=3.7
     - flask >=1.1.2,<=2.1.3
     - hyperopt >=0.2.3
     - matplotlib-base >=3.1.3
