--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -21,13 +21,13 @@ requirements:
     - python <3.13,>=3.11
     - pip
   run:
-    - python>=3.11
-    - pytorch::pytorch>=2.1
+    - python <3.13,>=3.11
+    - pytorch::pytorch >=2.1
     - astartes
     - aimsim
     - configargparse
-    - lightning>=2.0
-    - numpy<2.0
+    - lightning >=2.0
+    - numpy <2.0
     - pandas
     - rdkit
     - scikit-learn
